CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(idgen)
INCLUDE(UsePkgConfig)
FIND_PACKAGE(GTK)
PKGCONFIG(gtk+-2.0 GTK2_INCLUDE_DIR GTK2_LINK_DIR GTK2_LINK_FLAGS GTK2_CFLAGS)
PKGCONFIG(gthread-2.0 GTHREAD_INCLUDE_DIR GTHREAD_LINK_DIR GTHREAD_LINK_FLAGS+- GTHREAD_CFLAGS)
IF (GTK2_INCLUDE_DIR)
		SET(CMAKE_C_FLAGS "${GTK2_CFLAGS} ")
		STRING(REGEX REPLACE "-l" "" GTK_LIBRARIES "${GTK2_LINK_FLAGS} ")
		SEPARATE_ARGUMENTS(GTK_LIBRARIES)
		ADD_DEFINITIONS(-DHAVE_GTK2)
ELSE (GTK2_INCLUDE_DIR)
		MESSAGE(FATAL_ERROR "GTK or GTK2 is required to build this project.")
ENDIF (GTK2_INCLUDE_DIR)
ADD_EXECUTABLE(idgen main.c idgen.c random.c gtk2ui.c )
TARGET_LINK_LIBRARIES(idgen  ${GTK2_LINK_FLAGS})

